--- a/web-app/css/hris.css
+++ b/web-app/css/hris.css
@@ -250,6 +250,34 @@ span.glyphicon {
 	padding-right: 10px;
 	font-size: 1.2em;
 }
+.hris-btn {
+	margin : 15px;
+	width : 150px;
+	height: 100px;
+}
+
+.image-preview-input {
+    position: relative;
+	overflow: hidden;
+	margin: 0px;    
+    color: #333;
+    background-color: #fff;
+    border-color: #ccc;    
+}
+.image-preview-input input[type=file] {
+	position: absolute;
+	top: 0;
+	right: 0;
+	margin: 0;
+	padding: 0;
+	font-size: 20px;
+	cursor: pointer;
+	opacity: 0;
+	filter: alpha(opacity=0);
+}
+.image-preview-input-title {
+    margin-left:2px;
+}
 
 /*==========  Media Queries  ==========*/
  /* Large Devices, Wide Screens */
