--- a/web-app/css/hris.css
+++ b/web-app/css/hris.css
@@ -423,7 +423,7 @@ a{text-decoration:none;}
 /********************
 GENERIC BUTTON STYLES
 ********************/
-.btnn {font-size: calc(1px + 1vw); white-space:nowrap; width:100%; padding:.8em 1.5em; font-family: Open Sans, Helvetica,Arial,sans-serif; line-height:18px; display: inline-block;zoom: 1; color: #fff; text-align: center; position:relative; -webkit-transition: border .25s linear, color .25s linear, background-color .25s linear; transition: border .25s linear, color .25s linear, background-color .25s linear;}
+.btnn {border-radius: 5px;font-size: calc(1px + 1vw); white-space:nowrap; width:100%; padding:.8em 1.5em; font-family: Open Sans, Helvetica,Arial,sans-serif; line-height:18px; display: inline-block;zoom: 1; color: #fff; text-align: center; position:relative; -webkit-transition: border .25s linear, color .25s linear, background-color .25s linear; transition: border .25s linear, color .25s linear, background-color .25s linear;}
 
 .btnn.btn-concrete{background-color: #7e8c8d; border-color: #7e8c8d; -webkit-box-shadow: 0 3px 0 #4e5b5c; box-shadow: 0 3px 0 #4e5b5c;}
 .btnn.btn-concrete:hover{background-color:#6a7879;}
@@ -440,7 +440,7 @@ Icon styles
 
 .tableDesign{
     background-color: rgba(202, 199, 199, 0.78);
-    border-radius: 25px;
+    border-radius: 5px;
     border-bottom: solid 2px rgba(0,0,0,.25);
 }
 .nameLink{
